<resources>
    <string name="app_name">Akıllı Market Sepeti</string>

    <string name="products">Ürünler</string>
    <string name="history_favorites">Geçmiş &amp; Favoriler</string>
    <string name="basket">Sepet</string>

    <string name="product_image">Ürün Resmi</string>
    <string name="add_to_basket">Sepete Ekle</string>
    <string name="update_basket">Sepeti Güncelle</string>
    <string name="added_updated_in_basket">sepete eklendi/güncellendi</string>
    <string name="add_to_favorites">Favorilere Ekle</string>
    <string name="remove_from_favorites">Favorilerden Kaldır</string>
    <string name="ingredients">İçindekiler</string>
    <string name="ingredient_information_not_available">İçerik bilgisi mevcut değil.</string>
    <string name="category_prefix">Kategori: %s</string>
    <string name="unknown_category">Bilinmeyen Kategori</string>
    <string name="error_product_not_found">Hata: Ürün detayları yüklenemedi.</string>
    <string name="search_products_hint">Ürün veya kategori ara...</string>
    <string name="product_details">Ürün Detayları</string>
    <string name="remove_item">Ürünü Kaldır</string>
    <string name="increase_quantity">Miktarı Artır</string>
    <string name="decrease_quantity">Miktarı Azalt</string>
    <string name="product_removed_from_basket">Ürün sepetten kaldırıldı</string>

    <string name="favorites">Favoriler</string>
    <string name="purchase_history">Satın Alma Geçmişi</string>
    <string name="history_date_prefix">Tarih: %s</string>
    <string name="history_items_prefix">Ürünler: %s</string>
    <string name="history_item_count">Ürün Sayısı: %d</string>
    <string name="no_favorite_products_yet">Henüz favori ürününüz yok.</string>
    <string name="no_purchase_history_yet">Henüz satın alma geçmişiniz yok.</string>
    <string name="purchase_details">Satın Alma Detayları</string>
    <string name="purchase_date_header">Satın Alma Tarihi: %s</string>
    <string name="error_purchase_not_found">Hata: Satın alma detayları yüklenemedi.</string>
    <string name="purchase_item_count_details">Toplam Ürün: %d</string>


    <string name="current_basket">Sepetim</string>
    <string name="remove_from_basket">Sepetten Kaldır</string>
    <string name="recommendations_for_you">Sizin İçin Öneriler</string>
    <string name="quantity_prefix_basket">Adet: %d</string>
    <string name="quantity_prefix_details">x %d</string>
    <string name="your_basket_is_empty">Sepetiniz boş.</string>
    <string name="no_recommendations_available_yet">Henüz bir öneri mevcut değil.</string>
    <string name="complete_purchase">Alışverişi Tamamla</string>
    <string name="purchase_successful">Alışveriş Başarılı!</string>
    <string name="basket_empty_cannot_purchase">Sepetiniz boş</string>
    <string name="basket_item_count">Ürün Sayısı: %d</string>
    <string name="see_all">Tümünü Gör</string>
    <string name="show_all_categories">Tüm Kategoriler</string>
    <string name="search_results_title">"%s" için sonuçlar</string>
    <string name="all_categories">Tümü</string>
    <string name="empty_products_message">Kriterlerinize uygun ürün bulunamadı. Farklı bir arama veya kategori deneyin.</string>
    <string name="recommendations_for_this_product">Hoşunuza Gidebilecek Benzer Ürünler</string>
    <string name="no_detail_recommendations_available">Şu anda herhangi bir öneri bulunmamaktadır.</string>
    <string name="product_details_title">Ürün Detayları</string>
    <string name="product_image_background_desc">Ürün görseli yer tutucusu</string>
    <string name="title_history">Geçmiş</string>
    <string name="title_favorites">Favoriler</string>
    <string name="no_purchase_history">Geçmiş alışverişiniz bulunmamaktadır.</string>
    <string name="no_favorites_yet">Henüz hiç favori eklemediniz.</string>
    <string name="title_purchase_detail">Satın Alma Detayları</string>
    <string name="error_purchase_id_missing">Satın alma kimliği eksik.</string>
    <string name="purchase_date_prefix">Tarih: %s</string>
    <string name="purchased_items">Satın Alınan Ürünler</string>
    <string name="for_you">Sizin İçin</string>
</resources>