<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFavoritesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_favorites_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_favorite"
            tools:itemCount="2"/>

        <TextView
            android:id="@+id/text_empty_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_favorite_products_yet"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginVertical="16dp"/>


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"/>


        <TextView
            android:id="@+id/text_history_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_history"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_history"
            tools:itemCount="1"/>

        <TextView
            android:id="@+id/text_empty_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_purchase_history_yet"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginVertical="16dp"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>