<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.products.ProductDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_detail_product"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="@color/material_dynamic_neutral_variant80"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/product_image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/text_detail_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceHeadlineMedium"
            app:layout_constraintTop_toBottomOf="@id/image_detail_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Product Name" />

        <TextView
            android:id="@+id/text_detail_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintTop_toBottomOf="@id/text_detail_product_name"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="$0.00" />

        <TextView
            android:id="@+id/text_detail_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/text_detail_product_price"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Category: Category Name" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_detail_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/text_detail_ingredients_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ingredients"
            android:textAppearance="?attr/textAppearanceTitleSmall"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text_detail_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintTop_toBottomOf="@id/text_detail_ingredients_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Ingredient 1, Ingredient 2, Ingredient 3" />

        <TextView
            android:id="@+id/text_no_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ingredient_information_not_available"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/text_detail_ingredients_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_detail_ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_detail_add_to_basket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_to_basket"
            app:icon="@drawable/ic_add_shopping_cart"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_detail_toggle_favorite"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorites"
            app:icon="@drawable/ic_favorite_border"
            app:iconTint="?attr/colorSecondary"
            app:layout_constraintTop_toTopOf="@id/button_detail_add_to_basket"
            app:layout_constraintBottom_toBottomOf="@id/button_detail_add_to_basket"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>